<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/pngwing" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ivRegLogo"

                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                >




                <TextView
                    android:id="@+id/ivJoinUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:visibility="gone"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/rubik_regular"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="TODO"
                    android:text="Join Us" />


                <AutoCompleteTextView
                    android:id="@+id/atvUsernameReg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/test_view_bg"
                    android:drawableLeft="@drawable/icon_person"
                    android:drawableTint="#000"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_person"
                    android:hint="@string/usernameReg"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#000"
                    android:textColorHint="#717171"

                    android:textSize="15sp" />


                <AutoCompleteTextView
                    android:id="@+id/atvEmailReg"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/test_view_bg"
                    android:drawableLeft="@drawable/icon_mail"
                    android:drawablePadding="10dp"
                    android:drawableTint="#000"

                    android:drawableStart="@drawable/icon_mail"
                    android:hint="@string/emailReg"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#000"
                    android:textColorHint="#717171"

                    android:textSize="15sp" />



                <AutoCompleteTextView
                    android:id="@+id/atvPasswordReg"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/test_view_bg"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_password"
                    android:hint="@string/passwordReg"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:drawableTint="#000"

                    android:textColor="#000"
                    android:textColorHint="#717171"

                    android:textSize="15sp" />


                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btnsignup_gradient"
                    android:text="@string/sign_upReg"
                    android:textColor="#FFFFFF" />


                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/signin_redirect"
                    android:textColor="@color/tab_color" />



            </LinearLayout>

        </RelativeLayout>



    </ScrollView>






</RelativeLayout>
