<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tdee2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="#2196F3"
                tools:text="Target Daily Calories" />


            <AutoCompleteTextView
                android:id="@+id/caloriestaken"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="@dimen/_5sdp"

                android:layout_marginBottom="10dp"
                android:background="@drawable/test_view_bg"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="Calories consumed today"

                android:drawableTint="#000"

                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="#000"
                android:textColorHint="#717171"
                android:textSize="15sp" />
            <Button
                android:id="@+id/btncalculate"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsignup_gradient"
                android:text="Calculate"
                android:textColor="#FFFFFF" />


            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/please_select_your_goal"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <belka.us.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/goal_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="14sp"
                android:gravity="center"

                app:activeBgColor="@color/colorAccent"
                app:cornerRadius="0dp"
                app:inactiveBgColor="@color/lightGrey"
                app:inactiveTextColor="@color/white"
                app:separatorColor="@color/white"
                app:textToggleCenter="Maintenance"
                app:textToggleLeft="Fat Loss"
                app:textToggleRight="Mass Gain"
                app:toggleWidth="@dimen/_100sdp" />

            <TextView
                android:id="@+id/activity_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="You will need to consume"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tdee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    tools:text="asda"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calories"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/calories_from_protein"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cal_protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        tools:text="" />






                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_margin="@dimen/_10sdp"

                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/calories_from_fat"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"

                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/cal_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        tools:text="" />



                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_margin="@dimen/_10sdp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"

                        android:text="@string/calories_from_carbs"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/cal_carb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:textSize="16sp"

                        tools:text="" />




                </RelativeLayout>

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_190sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginBottom="4dp"
                    android:padding="22dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/bnve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>